@@ -11,9 +11,11 @@ Version 1.3.5
     * Save x as ... actions will always show file dialog
     * possibility to choose to use external download manager on every download
     * remember last section in preferences
+    * smarter address bar completer will show better search results
     * new User Agent manager lets you set User Agent per site
     * new restore session page lets you choose which tabs you want to restore
     * new scheme handler for file protocol allows browsing through directories
+    * new option to show loading progress in address bar
     * fixed visibility of navigation bar in fullscreen
     * fixed bad position of add tab button when there is a lot of tabs
     * fixed gui with RTL languages
